--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                         <li id="opone"><a href="./index.html">Home</a></li>
                         <li id="opone"><a href="./product.html">Products</a></li>
                         <li><a href="#">
-                                <h3 class="home">About</h3>
+                                <h3 class="home">About us</h3>
                             </a></li>
                         <li id="opone"><a href="#contact-section">Contact us</a></li>
                     </ul>
@@ -150,7 +150,9 @@
         <div class="footer-wrapper">
             <div class="first-half">
                 <div class="footer-section brand">
-                    <h1>FeetHub</h1>
+                     <div class="logo">
+                        <img src="./assests/images/home/logo.png" alt="logo">
+                </div>
                     <p>Stylish and comfortable shoes<br>
                         designed to elevate your<br>
                         everyday look with ease.</p>
@@ -159,9 +161,9 @@
                 <div class="footer-section">
                     <h2>Quick Links</h2>
                     <ul>
-                        <li><a href="./product.html">Product</a></li>
-                        <li><a href="./about.html">About Us</a></li>
-                        <li><a href="./about.html #contact-section">Contact Us</a></li>
+                        <li><a href="./product.html">Products</a></li>
+                        <li><a href="./about.html">About us</a></li>
+                        <li><a href="./about.html #contact-section">Contact us</a></li>
                     </ul>
                 </div>
 
