--- a/product_two.html
+++ b/product_two.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FeetHub-product-redirect</title>
-            <link rel="shortcut icon" href="./assests/icons/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assests/icons/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/product.css">
     <link rel="stylesheet" href="./css/productTwo.css">
@@ -28,14 +28,14 @@
                     <input type="checkbox" id="check">
                     <ul>
                         <li id="opone"><a href="./index.html">Home</a></li>
-                        <li><a href="./product.html">
+                        <li><a href="#">
                                 <h3 class="home">Products</h3>
                             </a></li>
-                        <li id="opone"><a href="./about.html">About</a></li>
+                        <li id="opone"><a href="./about.html">About us</a></li>
                         <li id="opone"><a href="./about.html">Contact us</a></li>
                     </ul>
                     <div class="icon">
-                       
+
                         <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
                         <a href="#"><i class="fa-regular fa-circle-user"></i></a>
                     </div>
@@ -47,9 +47,10 @@
 
                     <div class="banner-content">
                         <h2>NEW STYLES ON SALE: <span>UP TO 40% OFF</span></h2>
-                    </div>
 
-                    <a href="#" class="shop-link">Shop All Our New Markdowns</a>
+
+                        <a href="#" class="shop-link">Shop All Our New Markdowns</a>
+                    </div>
 
                     <button class="arrow"><i class="fa-solid fa-chevron-right"></i></button>
                 </div>
@@ -86,7 +87,7 @@
                                 <h2>UrbanStride Sneakers</h2>
                                 <p class="category">Men’s Shoes</p>
                             </div>
-                            <button class="wishlist"><i class="bi bi-heart"></i></button>
+                            <button class="wishlist"><i class="bi bi-heart-fill"></i></button>
                         </div>
 
                         <div class="desc">
@@ -113,9 +114,51 @@
                         <div class="size-section">
                             <p>Select Size</p>
                             <div class="sizes">
-                                <button>2.5</button><button>3</button><button>3.5</button><button>4</button>
-                                <button>4.5</button><button>5</button><button>5.5</button><button>6</button>
-                                <button>6.5</button><button>7</button><button>7.5</button>
+                                <label>
+                                    <input type="radio" name="size" value="2.5">
+                                    <span>2.5</span>
+                                </label>
+                                <label>
+                                    <input type="radio" name="size" value="3">
+                                    <span>3</span>
+                                </label>
+                                <label>
+                                    <input type="radio" name="size" value="3.5">
+                                    <span>3.5</span>
+                                </label>
+                                <label>
+                                    <input type="radio" name="size" value="4">
+                                    <span>4</span>
+                                </label>
+                                <label>
+                                    <input type="radio" name="size" value="2.5">
+                                    <span>2.5</span>
+                                </label>
+                                <label>
+                                    <input type="radio" name="size" value="3">
+                                    <span>3</span>
+                                </label>
+                                <label>
+                                    <input type="radio" name="size" value="3.5">
+                                    <span>3.5</span>
+                                </label>
+                                <label>
+                                    <input type="radio" name="size" value="4">
+                                    <span>4</span>
+                                </label>
+                                <label>
+                                    <input type="radio" name="size" value="3">
+                                    <span>3</span>
+                                </label>
+                                <label>
+                                    <input type="radio" name="size" value="3.5">
+                                    <span>3.5</span>
+                                </label>
+                                <label>
+                                    <input type="radio" name="size" value="4">
+                                    <span>4</span>
+                                </label>
+                                
                             </div>
                         </div>
 
@@ -135,60 +178,66 @@
             <div class="wrapper">
                 <h1>You Might Also Like</h1>
                 <div class="cards">
-                    <a href="#"><div class="product">
-                        <div class="image">
-                            <img src="./assests/images/product-two//optionOne.png" alt="images!">
-
-                        </div>
-                        <div class="content">
-                            <div class="details">
-                                <h2> Air Jordan 1 Mid</h2>
-                                <h4>Men’s Shoes</h4>
-                                <h4>1 Colour</h4>
+                    <a href="#">
+                        <div class="product">
+                            <div class="image">
+                                <img src="./assests/images/product-two//optionOne.png" alt="images!">
 
                             </div>
-                            <div class="price">
-                                <h2>₹1,199</h2>
+                            <div class="content">
+                                <div class="details">
+                                    <h2> Air Jordan 1 Mid</h2>
+                                    <h4>Men’s Shoes</h4>
+                                    <h4>1 Colour</h4>
 
+                                </div>
+                                <div class="price">
+                                    <h2>₹1,199</h2>
+
+                                </div>
                             </div>
                         </div>
-                    </div></a>
-                    <a href="#"><div class="product">
-                        <div class="image">
-                            <img src="./assests/images/product-two/optionTwo.png" alt="images!">
-
-                        </div>
-                        <div class="content">
-                            <div class="details">
-                                <h2>Woven flat slide sandal</h2>
-                                <h4>Women’s Slippers</h4>
-                                <h4>1 Colour</h4>
+                    </a>
+                    <a href="#">
+                        <div class="product">
+                            <div class="image">
+                                <img src="./assests/images/product-two/optionTwo.png" alt="images!">
 
                             </div>
-                            <div class="price">
-                                <h2>₹599</h2>
+                            <div class="content">
+                                <div class="details">
+                                    <h2>Woven flat slide sandal</h2>
+                                    <h4>Women’s Slippers</h4>
+                                    <h4>1 Colour</h4>
 
+                                </div>
+                                <div class="price">
+                                    <h2>₹599</h2>
+
+                                </div>
                             </div>
                         </div>
-                    </div></a>
-                   <a href="#"><div class="product">
-                        <div class="image">
-                            <img src="./assests/images/product-two/optionThree.png" alt="images!">
-
-                        </div>
-                        <div class="content">
-                            <div class="details">
-                                <h2>Flat slide</h2>
-                                <h4>Women’s Slippers</h4>
-                                <h4>3 Colour</h4>
+                    </a>
+                    <a href="#">
+                        <div class="product">
+                            <div class="image">
+                                <img src="./assests/images/product-two/optionThree.png" alt="images!">
 
                             </div>
-                            <div class="price">
-                                <h2>₹399</h2>
+                            <div class="content">
+                                <div class="details">
+                                    <h2>Flat slide</h2>
+                                    <h4>Women’s Slippers</h4>
+                                    <h4>3 Colours</h4>
 
+                                </div>
+                                <div class="price">
+                                    <h2>₹399</h2>
+
+                                </div>
                             </div>
                         </div>
-                    </div></a>
+                    </a>
                 </div>
             </div>
         </section>
@@ -234,16 +283,16 @@
                     <div class="order-summary">
                         <h3>Order Summary</h3>
                         <div class="summary-item">
-                            <span>Subtotal</span>
-                            <span>₹1,299</span>
+                            <span class="font">Subtotal</span>
+                            <span class="font">₹1,299</span>
                         </div>
                         <div class="summary-item">
-                            <span>Discount</span>
-                            <span>-₹299</span>
+                            <span class="font">Discount</span>
+                            <span class="font">-₹299</span>
                         </div>
                         <div class="summary-item">
-                            <span>Delivery Fee</span>
-                            <span>₹50</span>
+                            <span class="font">Delivery Fee</span>
+                            <span class="font">₹50</span>
                         </div>
                         <hr>
                         <div class="summary-total">
@@ -264,7 +313,9 @@
         <div class="footer-wrapper">
             <div class="first-half">
                 <div class="footer-section brand">
-                    <h1>FeetHub</h1>
+                    <div class="logo">
+                        <img src="./assests/images/home/logo.png" alt="logo">
+                    </div>
                     <p>Stylish and comfortable shoes<br>
                         designed to elevate your<br>
                         everyday look with ease.</p>
@@ -273,9 +324,9 @@
                 <div class="footer-section">
                     <h2>Quick Links</h2>
                     <ul>
-                         <li><a href="./product.html">Product</a></li>
-                        <li><a href="./about.html">About Us</a></li>
-                        <li><a href="./about.html #contact-section">Contact Us</a></li>
+                        <li><a href="./product.html">Products</a></li>
+                        <li><a href="./about.html">About us</a></li>
+                        <li><a href="./about.html#contact-section">Contact us</a></li>
                     </ul>
                 </div>
 
@@ -290,11 +341,12 @@
 
                 <div class="footer-section">
                     <h2>Follow Us</h2>
-                   <div class="social-icons">
-                    <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
-                    <a href="https://x.com/?lang=en" target="_blank"><i class="bi bi-twitter-x"></i></a>
-                </div>
+                    <div class="social-icons">
+                        <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank"><i
+                                class="bi bi-instagram"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
+                        <a href="https://x.com/?lang=en" target="_blank"><i class="bi bi-twitter-x"></i></a>
+                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -308,7 +360,7 @@
 
 
     </footer>
-<script src="./js/query.js"></script>
+    <script src="./js/query.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
