--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 <h3 class="home">Home</h3>
                             </a></li>
                         <li id="opone"><a href="./product.html">Products</a></li>
-                        <li id="opone"><a href="./about.html">About</a></li>
+                        <li id="opone"><a href="./about.html">About us</a></li>
                         <li id="opone"><a href="./about.html">Contact us</a></li>
                     </ul>
                     <div class="icon">
@@ -49,37 +49,37 @@
                         <h1>Steps Into</h1>
                         <h2>Style</h2>
                         <p>Discover premium footwear that defines your journey</p>
-                        <a href="#"><button class="button-primary">Shop Now</button></a>
+                        <!-- <a href="./product.html"><button class="button-primary">Shop Now</button></a> -->
                     </div>
                 </div>
-                <div class="carousel">
+                <div class="carousel adjust">
                     <div class="image">
                         <img src="./assests/images/home/Banner1-C2.png" alt="image2">
                     </div>
                     <div class="content contentTwo">
-                        <h1>Quality Craftsmanship, Every Pair</h1>
+                        <h1>Trusted by Thousands of Happy Feet</h1>
                         <p>Focus on materials or brand philosophy</p>
-                        <a href="#"><button class="button-primary">View More</button></a>
+                        <!-- <a href="#"><button class="button-primary">View More</button></a> -->
                     </div>
                 </div>
-                <div class="carousel">
+                <div class="carousel adjust">
                     <div class="image">
                         <img src="./assests/images/home/Banner1-C3.png" alt="image3">
                     </div>
                     <div class="content contentThree">
-                        <h1>Explore Our Summer Collection</h1>
-                        <p>Feature bright, seasonal footwear</p>
-                        <a href="#"><button class="button-primary">View Collections</button></a>
+                        <h1>Fast, Reliable Delivery to Your Doorstep</h1>
+                        <p>Get your favorite pairs delivered lightning-fast with real-time tracking support.</p>
+                        <!-- <a href="#seasonal"><button class="button-primary">View Collections</button></a> -->
                     </div>
                 </div>
-                <div class="carousel">
+                <div class="carousel adjust">
                     <div class="image">
                         <img src="./assests/images/home/Banner1-C4.png" alt="image4">
                     </div>
                     <div class="content contentFour">
-                        <h1>Exclusive Online Deals!</h1>
-                        <p>Promote current offers</p>
-                        <a href="#"><button class="button-primary">Shop Now</button></a>
+                        <h1>Engineered for All-Day Comfort</h1>
+                        <p>Designed with ergonomic precision for those who stay on their feet all day.</p>
+                        <!-- <a href="#"><button class="button-primary">Shop Now</button></a> -->
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                             <div class="details">
                                 <h2>Sport Runners</h2>
                                 <h4>Women’s and Men’s Shoes</h4>
-                                <h4>2 Colour</h4>
+                                <h4>2 Colours</h4>
 
                             </div>
                             <div class="price">
@@ -213,11 +213,11 @@
                             </div>
                             <div class="content">
                                 <div class="details">
-                                    <h2>Indoor Flip-Flops</h2>
-                                    <h4>Everyday Comfort for Everyone at Home</h4>
+                                    <h2>Men's Shoes</h2>
+                                    <h4>Refined Shoes for Any Moment</h4>
 
                                 </div>
-                                <a href="#" class="button">Shop Flip-Flops</a>
+                                <a href="#" class="button">Shop Men’s</a>
                             </div>
                         </div>
                         <div class="product">
@@ -227,10 +227,10 @@
                             </div>
                             <div class="content">
                                 <div class="details">
-                                    <h2>Kids Footwear</h2>
-                                    <h4>Playful Steps, Durable Design</h4>
+                                    <h2>Women's Shoes</h2>
+                                    <h4>Elegance & Trend for Her</h4>
                                 </div>
-                                <a href="#" class="button">Shop Kids</a>
+                                <a href="#" class="button">Shop Women’s</a>
                             </div>
                         </div>
                         <div class="product">
@@ -239,10 +239,10 @@
                             </div>
                             <div class="content">
                                 <div class="details">
-                                    <h2>Family Sneakers</h2>
-                                    <h4>Matching Styles for All Ages</h4>
+                                    <h2>Formal Footwear</h2>
+                                    <h4>Perfect Picks for Work & Events</h4>
                                 </div>
-                                <a href="#" class="button">Shop Family Sneakers</a>
+                                <a href="#" class="button">Shop Formal Wear</a>
                             </div>
                         </div>
                     </div>
@@ -254,11 +254,11 @@
                             </div>
                             <div class="content">
                                 <div class="details">
-                                    <h2>Indoor Flip-Flops</h2>
-                                    <h4>Everyday Comfort for Everyone at Home</h4>
+                                    <h2>Summer Sandals</h2>
+                                    <h4>Light & Breezy for Warm Days</h4>
 
                                 </div>
-                                <a href="#" class="button">Shop Flip-Flops</a>
+                                <a href="#" class="button">Shop Sandals</a>
                             </div>
                         </div>
                         <div class="product">
@@ -268,10 +268,10 @@
                             </div>
                             <div class="content">
                                 <div class="details">
-                                    <h2>Kids Footwear</h2>
-                                    <h4>Playful Steps, Durable Design</h4>
+                                    <h2>Winter Boots</h2>
+                                    <h4>Stay Warm & Stylish</h4>
                                 </div>
-                                <a href="#" class="button">Shop Kids</a>
+                                <a href="#" class="button">Shop Boots</a>
                             </div>
                         </div>
                         <div class="product">
@@ -280,10 +280,10 @@
                             </div>
                             <div class="content">
                                 <div class="details">
-                                    <h2>Family Sneakers</h2>
-                                    <h4>Matching Styles for All Ages</h4>
+                                    <h2>Rainy Day Footwear</h2>
+                                    <h4>Dry Steps in Wet Weather</h4>
                                 </div>
-                                <a href="#" class="button">Shop Family Sneakers</a>
+                                <a href="#" class="button">Shop Rainwear</a>
                             </div>
                         </div>
                     </div>
@@ -361,7 +361,9 @@
         <div class="footer-wrapper">
             <div class="first-half">
             <div class="footer-section brand">
-                <h1>FeetHub</h1>
+                <div class="logo">
+                        <img src="./assests/images/home/logo.png" alt="logo">
+                </div>
                 <p>Stylish and comfortable shoes<br>
                     designed to elevate your<br>
                     everyday look with ease.</p>
@@ -370,9 +372,9 @@
             <div class="footer-section">
                 <h2>Quick Links</h2>
                 <ul>
-                    <li><a href="./product.html">Product</a></li>
-                        <li><a href="./about.html">About Us</a></li>
-                        <li><a href="./about.html #contact-section">Contact Us</a></li>
+                    <li><a href="./product.html">Products</a></li>
+                        <li><a href="./about.html">About us</a></li>
+                        <li><a href="./about.html#contact-section">Contact us</a></li>
                 </ul>
             </div>
 
@@ -405,7 +407,7 @@
 
 
     </footer>
-
+ <!-- <button id="floatBtn" class="floating-btn">+</button> -->
     <script src="./js/query.js"></script>
     <script src="./js/script.js"></script>
 
