--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
                     <input type="checkbox" id="check">
                     <ul>
                         <li id="opone"><a href="./index.html">Home</a></li>
-                        <li><a href="#">
+                        <li><a href="./product.html">
                                 <h3 class="home">Products</h3>
                             </a></li>
                         <li id="opone"><a href="./about.html">About us</a></li>
@@ -157,7 +157,7 @@
                     <ul>
                         <li><a href="./product.html">Products</a></li>
                         <li><a href="./about.html">About us</a></li>
-                        <li><a href="./about.html #contact-section">Contact us</a></li>
+                        <li><a href="./about.html#contact-section">Contact us</a></li>
                     </ul>
                 </div>
 
