--- a/product_two.html
+++ b/product_two.html
@@ -28,7 +28,7 @@
                     <input type="checkbox" id="check">
                     <ul>
                         <li id="opone"><a href="./index.html">Home</a></li>
-                        <li><a href="#">
+                        <li><a href="./product.html">
                                 <h3 class="home">Products</h3>
                             </a></li>
                         <li id="opone"><a href="./about.html">About us</a></li>
@@ -62,9 +62,12 @@
             <div class="wrapper">
                 <div class="left">
                     <div class="big-image">
-                        <img src="./assests/images/product-two/big.png" alt="image!">
+                        <img src="./assests/images/product-two/colorGreen.png" alt="image!">
                     </div>
                     <div class="groups">
+                        <div class="images">
+                            <img src="./assests/images/product-two/colorGreen.png" alt="image">
+                        </div>
                         <div class="images">
                             <img src="./assests/images/product-two/viewOne.png" alt="image">
                         </div>
@@ -87,7 +90,7 @@
                                 <h2>UrbanStride Sneakers</h2>
                                 <p class="category">Men’s Shoes</p>
                             </div>
-                            <button class="wishlist"><i class="bi bi-heart-fill"></i></button>
+                            <!-- <button class="wishlist"><i class="bi bi-heart-fill"></i></button> -->
                         </div>
 
                         <div class="desc">
@@ -249,7 +252,7 @@
 
                     <div class="checkout-main">
                         <div class="product-image">
-                            <img src="./assests/images/product-two/big.png" alt="UrbanStride Sneakers">
+                            <img src="./assests/images/product-two/colorGreen.png" alt="UrbanStride Sneakers">
                         </div>
 
                         <div class="product-details">
