--- a/product_two.html
+++ b/product_two.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="banner-slider">
+            <!-- <div class="banner-slider">
                 <div class="wrapper">
                     <button class="arrow"><i class="fa-solid fa-chevron-left"></i></button>
 
@@ -54,7 +54,7 @@
 
                     <button class="arrow"><i class="fa-solid fa-chevron-right"></i></button>
                 </div>
-            </div>
+            </div> -->
         </div>
     </header>
     <main>
@@ -90,7 +90,7 @@
                                 <h2>UrbanStride Sneakers</h2>
                                 <p class="category">Men’s Shoes</p>
                             </div>
-                            <!-- <button class="wishlist"><i class="bi bi-heart-fill"></i></button> -->
+                            <!--    <button class="wishlist"><i class="bi bi-heart-fill"></i></button> -->
                         </div>
 
                         <div class="desc">
