--- a/product.html
+++ b/product.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="banner-slider">
+            <!-- <div class="banner-slider">
                 <div class="wrapper">
                     <button class="arrow"><i class="fa-solid fa-chevron-left"></i></button>
 
@@ -54,7 +54,7 @@
 
                     <button class="arrow"><i class="fa-solid fa-chevron-right"></i></button>
                 </div>
-            </div>
+            </div> -->
         </div>
     </header>
     <main>
@@ -63,43 +63,21 @@
                 <div class="search-box">
                     <span class="search-icon"><i class="bi bi-search"></i></span>
                     <form action="">
-                    <input type="text" placeholder="Search for your favorite item">
-                </form>
+                        <input type="text" placeholder="Search for your favorite item">
+                    </form>
                 </div>
-                <div class="filter-toggle" id="filterToggle">
-                 <span class="filter">Show Filters</span>
-                <img src="./assests/images/product/filter.png" alt="Filter Icon">
-                </div>
-
-                <!-- Sidebar Filter Panel -->
-                <div class="filter-sidebar" id="filterSidebar">
-                    <div class="filter-header">
-                        <h3>Filters</h3>
-                        <button id="closeFilter">&times;</button>
+                <div class="dropdown">
+                    <div class="dropbtn" onclick="toggleDropdown()">
+                        <span class="filter">Show Filters</span>
+                        <img src="./assests/images/product/filter.png" alt="Filter Icon">
                     </div>
-                    <div class="filter-content">
-                       
-                        <label>
-                            <input type="checkbox" /> Men's Shoes
-                        </label>
-                        <label>
-                            <input type="checkbox" /> Women's Shoes
-                        </label>
-                        <label>
-                            <input type="checkbox" /> Kids' Shoes
-                        </label>
-                        <hr>
-                        <label>
-                            <input type="checkbox" /> Price: Low to High
-                        </label>
-                        <label>
-                            <input type="checkbox" /> Price: High to Low
-                        </label>
+                    <div id="dropdownMenu" class="dropdown-content">
+                        <a href="#">Price: Low to High</a>
+                        <a href="#">Price: High to Low</a>
+                        <a href="#">Newest First</a>
+                        <a href="#">Popularity</a>
                     </div>
                 </div>
-
-                <!-- Overlay -->
-                <div class="filter-overlay" id="filterOverlay"></div>
             </div>
         </div>
         <section class="product-section" id="Mens">
@@ -229,7 +207,7 @@
                 </div>
             </div>
         </section>
-        <section class="product-section"  id="Mens">
+        <section class="product-section" id="Mens">
             <div class="wrapper">
                 <h1>Women's Collection</h1>
                 <div class="cards">
@@ -538,29 +516,45 @@
     </footer>
 
     <script>
+        function toggleDropdown() {
+      document.getElementById("dropdownMenu").classList.toggle("show");
+    }
+
+    // Close dropdown when clicking outside
+    window.onclick = function(event) {
+      if (!event.target.matches('.dropbtn')) {
+        let dropdowns = document.getElementsByClassName("dropdown-content");
+        for (let i = 0; i < dropdowns.length; i++) {
+          let openDropdown = dropdowns[i];
+          if (openDropdown.classList.contains('show')) {
+            openDropdown.classList.remove('show');
+          }
+        }
+      }
+    }
         // filter
-const filterToggle = document.getElementById('filterToggle');
-const filterSidebar = document.getElementById('filterSidebar');
-const filterOverlay = document.getElementById('filterOverlay');
-const closeFilter = document.getElementById('closeFilter');
+        // const filterToggle = document.getElementById('filterToggle');
+        // const filterSidebar = document.getElementById('filterSidebar');
+        // const filterOverlay = document.getElementById('filterOverlay');
+        // const closeFilter = document.getElementById('closeFilter');
 
-filterToggle.addEventListener('click', () => {
-    filterSidebar.classList.add('active');
-    filterOverlay.classList.add('active');
-    document.body.classList.add("no-scroll");
-});
+        // filterToggle.addEventListener('click', () => {
+        //     filterSidebar.classList.add('active');
+        //     filterOverlay.classList.add('active');
+        //     document.body.classList.add("no-scroll");
+        // });
 
-closeFilter.addEventListener('click', () => {
-    filterSidebar.classList.remove('active');
-    filterOverlay.classList.remove('active');
-    document.body.classList.remove("no-scroll");
-});
+        // closeFilter.addEventListener('click', () => {
+        //     filterSidebar.classList.remove('active');
+        //     filterOverlay.classList.remove('active');
+        //     document.body.classList.remove("no-scroll");
+        // });
 
-filterOverlay.addEventListener('click', () => {
-    filterSidebar.classList.remove('active');
-    filterOverlay.classList.remove('active');
-    document.body.classList.remove("no-scroll");
-});
+        // filterOverlay.addEventListener('click', () => {
+        //     filterSidebar.classList.remove('active');
+        //     filterOverlay.classList.remove('active');
+        //     document.body.classList.remove("no-scroll");
+        // });
 
     </script>
 </body>
