--- a/form.html
+++ b/form.html
@@ -134,7 +134,7 @@
                         </div>
                     </div>
 
-                    <button type="button" class=" proceed button-primary" onclick="finalSubmit()">Proceed</button>
+                    <a href="./product.html"><button type="button" class=" proceed button-primary" onclick="finalSubmit()">Proceed</button>
                 </form>
             </div>
         </section>
