--- a/product_two.html
+++ b/product_two.html
@@ -135,31 +135,31 @@
                                 </label>
                                 <label>
                                     <input type="radio" name="size" value="2.5">
-                                    <span>2.5</span>
+                                    <span>4.5</span>
                                 </label>
                                 <label>
                                     <input type="radio" name="size" value="3">
-                                    <span>3</span>
+                                    <span>5</span>
                                 </label>
                                 <label>
                                     <input type="radio" name="size" value="3.5">
-                                    <span>3.5</span>
+                                    <span>5.5</span>
                                 </label>
                                 <label>
                                     <input type="radio" name="size" value="4">
-                                    <span>4</span>
+                                    <span>6</span>
                                 </label>
                                 <label>
                                     <input type="radio" name="size" value="3">
-                                    <span>3</span>
+                                    <span>6.5</span>
                                 </label>
                                 <label>
                                     <input type="radio" name="size" value="3.5">
-                                    <span>3.5</span>
+                                    <span>7</span>
                                 </label>
                                 <label>
                                     <input type="radio" name="size" value="4">
-                                    <span>4</span>
+                                    <span>7.5</span>
                                 </label>
                                 
                             </div>
@@ -274,9 +274,9 @@
                                 <div class="quantity">
                                     <label>Quantity</label>
                                     <div class="qty-box">
-                                        <button>-</button>
-                                        <span>1</span>
-                                        <button>+</button>
+                                        <button id="minus">-</button>
+                                        <span id="quantity">1</span>
+                                        <button id="plus">+</button>
                                     </div>
                                 </div>
                             </div>
@@ -300,7 +300,7 @@
                         <hr>
                         <div class="summary-total">
                             <strong>Total</strong>
-                            <strong>₹1,050</strong>
+                            <strong id="total">₹1,050</strong>
                         </div>
                         <a href="./form.html"><button class="button-primary" id="Confirm">BUY NOW</button></a>
                     </div>
@@ -365,6 +365,42 @@
     </footer>
     <script src="./js/query.js"></script>
     <script src="./js/script.js"></script>
+    <script>
+  // Initial values
+  let price = 1299;   // Product price
+  let discount = 299; // Discount amount
+  let delivery = 50;  // Delivery fee
+  let quantity = 1;   // Default quantity
+
+  // Get elements
+  const qtyElement = document.querySelector("#quantity"); 
+  const totalElement = document.querySelector("#total"); 
+
+  // Function to update values
+  function updateValues() {
+    let subtotal = price * quantity;
+    let total = (subtotal - discount) + delivery;
+    qtyElement.textContent = quantity;
+    totalElement.textContent = "₹" + total;
+  }
+
+  // Increase quantity
+  document.querySelector("#plus").addEventListener("click", function () {
+    quantity++;
+    updateValues();
+  });
+
+  // Decrease quantity
+  document.querySelector("#minus").addEventListener("click", function () {
+    if (quantity > 1) {
+      quantity--;
+      updateValues();
+    }
+  });
+
+  // Initialize
+  updateValues();
+</script>
 </body>
 
 </html>
