--- a/form.html
+++ b/form.html
@@ -113,10 +113,11 @@
                                         href="#">Add money & get rewarded</a></p>
                             </div>
                             <div class="form-row coupon-row">
-                                <i class="bi bi-plus"></i>
+                                <div>
                                 <input type="text" placeholder="Enter Code" id="code"  onkeyup="forcode()" required/>
-                                <span id="code_err"></span>
                                 <button type="submit" class="apply">Apply</button>
+                                </div>
+                                <span id="code_err"></span>
                             </div>
 
                             <p class="sub-head-two">Another payment method</p>
@@ -134,7 +135,7 @@
                         </div>
                     </div>
 
-                    <a href="./product.html"><button type="button" class=" proceed button-primary" onclick="finalSubmit()">Proceed</button>
+                    <button type="button" class=" proceed button-primary" onclick="finalSubmit()">Proceed</button>
                 </form>
             </div>
         </section>
