gap fixed in form page

--- a/form.html
+++ b/form.html
@@ -113,7 +113,7 @@
                                         href="#">Add money & get rewarded</a></p>
                             </div>
                             <div class="form-row coupon-row">
-                                <div>
+                                <div class="forgap">
                                 <input type="text" placeholder="Enter Code" id="code"  onkeyup="forcode()" required/>
                                 <button type="submit" class="apply">Apply</button>
                                 </div>
