--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                      
                     </div>
                 </div>
-                <!-- <div class="carousel adjust">
+                 <div class="carousel adjust">
                     <div class="image">
                         <img src="./assests/images/home/Banner1-C2.png" alt="image2">
                     </div>
@@ -81,7 +81,7 @@
                         <p>Designed with ergonomic precision for those who stay on their feet all day.</p>
         
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
     </header>
