--- a/product.html
+++ b/product.html
@@ -21,7 +21,7 @@
             <nav>
                 <div class="nav-wrap">
                     <div class="logo">
-                        <img src="./assests/images/home/logo.png" alt="logo">
+                        <a href="./index.html"><img src="./assests/images/home/logo.png" alt="logo"></a>
                     </div>
 
                     <label for="check" class="menu_icon"> <i class="bi bi-list"></i></label>
